# XoomyBot

./: README.md  functie_shapesConverter.ipynb
devel/: .catkin  .rosinstall  setup.sh
devel/include/turtlebot3_example/: Turtlebot3Action.h  Turtlebot3ActionFeedback.h  Turtlebot3ActionGoal.h  Turtlebot3ActionResult.h  Turtlebot3Feedback.h  Turtlebot3Goal.h  Turtlebot3Result.h
devel/include/turtlebot3_msgs/: SensorState.h  Sound.h  VersionInfo.h
devel/lib/pkgconfig/: turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc
devel/lib/turtlebot3_bringup/: turtlebot3_diagnostics
devel/lib/turtlebot3_fake/: turtlebot3_fake_node
devel/lib/turtlebot3_gazebo/: turtlebot3_drive
devel/lib/turtlebot3_slam/: flat_world_imu_node
devel/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
devel/share/turtlebot3_example/cmake/: turtlebot3_example-msg-paths.cmake  turtlebot3_exampleConfig.cmake
devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
devel/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
devel/share/turtlebot3_msgs/cmake/: turtlebot3_msgs-msg-paths.cmake  turtlebot3_msgsConfig.cmake
devel/share/turtlebot3_navigation/cmake/: turtlebot3_navigationConfig.cmake
src/decide/: CMakeLists.txt  package.xml
src/decide/src/: decide_node.cpp
src/decidepy/: CMakeLists.txt  package.xml
src/decidepy/src/: decide_node.py
src/paint_path/: CMakeLists.txt  package.xml
src/paint_path/nodes/: paint_path.py  paint_path_node.py
src/usb_cam/nodes/: usb_cam_node.cpp
src/wheel_control/: CMakeLists.txt  package.xml
src/wheel_control/launch/: wheel_control.launch
src/wheel_control/msg/: path_message.msg
src/wheel_control/nodes/: create_path.py  wheel_control.py  wheel_control_node.py
src/wheel_control/srv/: path_service.srv
src/xoomybot/: CMakeLists.txt  package.xml
src/xoomybot/launch/: xoomybot.launch
src/xoomybot/src/: wheel_control
src/xoomybot/wheel_control/: CMakeLists.txt  package.xml
(+9 files in other folders)
