<?xml version="1.0"?>
<package format="2">
  <name>wheel_control</name>
  <version>1.2.1</version>
  <description>
    Sends cmd_vel to gazebo.
  </description>
  <license>BSD</license>
  <author>Lotte H</author>
  <author>Leen G</author>
  <maintainer email="xoomybot@gmail.com">Xoomybot</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
</package>
